--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
 
 :root {
     --gray-text: #a8a4a4;
+    --home-background: #ffeddb;
 }
 
 /*----------- STYLES -----------*/
@@ -20,7 +21,7 @@ body {
 }
 
 .body-wrapper-home {
-    background-color: #ffeddb;
+    background-color: var(--home-background);
 }
 
 .container {
@@ -35,19 +36,120 @@ a {
     color: black;
 }
 
-/* Header */
+/*Hamburger menu*/
 
-header {
-    width: 300px;
+.menuToggle {
+    display: block;
+    position: relative;
+    /* top: 50px; */
+    /* left: 50px; */
+
+    z-index: 1;
+
+    -webkit-user-select: none;
+    user-select: none;
 }
 
-header h1 {
-    font-weight: normal;
-    font-size: 1.5em;
+.menuToggle a {
+    text-shadow: none;
+    transition: text-shadow 0.3 ease;
+}
+
+.menuToggle a:hover {
+    text-shadow: 0 1px gray;
+}
+
+.menuToggle input {
+    display: block;
+    width: 40px;
+    height: 32px;
+    position: absolute;
+    top: -7px;
+    left: -5px;
+    cursor: pointer;
+    opacity: 0;
+    z-index: 2;
+
+    -webkit-touch-callout: none;
+}
+
+.menuToggle span {
+    display: block;
+    width: 33px;
+    height: 4px;
+    margin-bottom: 5px;
+    position: relative;
+
+    background: #cdcdcd;
+    border-radius: 3px;
+    z-index: 1;
+
+    transform-origin: 4px 0;
+    transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+              background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+              opacity 0.55s ease;
+}
+
+.menuToggle span:first-child
+{
+  transform-origin: 0% 0%;
+}
+
+.menuToggle span:nth-last-child(2)
+{
+  transform-origin: 0% 100%;
+}
+
+.menuToggle input:checked ~ span
+{
+  opacity: 1;
+  transform: rotate(45deg) translate(-2px, -1px);
+  background: #232323;
+}
+
+.menuToggle input:checked ~ span:nth-last-child(3)
+{
+  opacity: 0;
+  transform: rotate(0deg) scale(0.2, 0.2);
+}
+
+.menuToggle input:checked ~ span:nth-last-child(2)
+{
+  transform: rotate(-45deg) translate(0, -1px);
+}
+
+.menu
+{
+  position: absolute;
+  width: 300px;
+  margin: -100px 0 0 -50px;
+  padding: 50px;
+  /* padding-top: 125px; */
+  padding-top: 75px;
+  
+  list-style-type: none;
+  -webkit-font-smoothing: antialiased;
+  
+  transform-origin: 0% 0%;
+  transform: translate(-100%, 0);
+  
+  transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
+}
+
+/* #menu li
+{
+  padding: 10px 0;
+  font-size: 22px;
+} */
+
+.menuToggle input:checked ~ ul
+{
+  transform: none;
 }
 
 ul {
     padding: 0;
+    list-style: none;
 }
 
 li {
@@ -68,6 +170,20 @@ li.active {
     color: var(--gray-text);
 }
 
+.menuToggle .display-none {
+    display: none;
+}
+
+/* .nav-menu */
+
+.nav-menu {
+    width: 300px;
+}
+
+.nav-menu h1 {
+    font-weight: normal;
+    font-size: 1.5em;
+}
 
 .margin-top-40 {
     margin-top: 40px;
@@ -82,13 +198,9 @@ li.active {
     margin-top: 10px;
 }
 
-ul {
-    list-style: none;
-}
+/* .main-container */
 
-/* Main */
-
-main {
+.main-container {
     width: calc(100vw - 300px);
     display: flex;
     justify-content: center;
@@ -100,28 +212,29 @@ main {
     text-decoration: underline;
 }
 
-main img {
+.main-container img {
     max-width: 100%;
 }
 
 /*Contact*/
 
-article{
+.main-article{
     width: calc(100vw - 300px);
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    text-align: justify;
+    text-align: center;
+    margin: 5px 0 0 0;
 }
 
 /*About*/
-.about main {
+.about .main-container {
     align-items: flex-start;
     margin-top: 70px;   
 }
 
-.about main p {
+.about .main-container p {
     text-align: justify;
 }
 
@@ -136,8 +249,19 @@ article{
     left: 50px;
 }
 
-article *{
-    margin: 5px 0 0 0;
+
+/*Portfolio*/
+
+.scrollable-portfolio {
+    overflow-x: scroll;
+    justify-content: flex-start;
+}
+
+.scrollable-portfolio img {
+    margin-left: 10px;
+    height: 400px;
+    width: 550px;
+    object-fit: contain;
 }
 
 /* Footer */
@@ -151,6 +275,12 @@ footer {
     padding-right: 30px;
 }
 
+/* Menu in home */
+
+.body-wrapper-home .menu{
+    background-color: var(--home-background);
+}
+
 /*----------- MEDIA QUERIES -----------*/
 
 /* Tablet devices */
@@ -158,19 +288,53 @@ footer {
 
     .container {
         padding-top: 25px;
-    }
-
-    main {
         flex-direction: column;
     }
 
-    .about main {
+    .nav-menu {
+        width: 100%;
+        display: flex;
+        flex-direction: row-reverse;
+        justify-content: space-between;
+    }
+
+    .menuToggle {
+        padding-top: 20px;
+    }
+
+    .menuToggle .display-none {
+        display: block;
+    }
+
+    .menu {
+        max-height: 100vh;
+        width: 120px;
+        padding-top: 100px;
+        background-color: white;
+    }
+
+    .main-container {
+        flex-direction: column;
+    }
+
+    .main-container.scrollable-portfolio {
+        width: 100%;
+        flex-direction: row;
+    }
+
+    .about .main-container {
         margin-top: 10px;
+        width: 100%;
     }
 
     .aboutImg {
         width: 65%;
         margin: 0 auto 0 auto;
+    }
+
+    .main-article {
+        width: 100%;
+        height: inherit;
     }
 
     li {
@@ -189,7 +353,25 @@ footer {
         height: auto;
     }
 
-    main {
+    .nav-menu {
+        flex-direction: column-reverse;
+    }
+
+    ul.menu {
+        width: 100%;
+    }
+
+    .main-container.scrollable-portfolio {
+        padding: 30px 0;
+        flex-direction: column;
+    }
+
+    .main-container.scrollable-portfolio img {
+        height: auto;
+        margin-bottom: 30px;
+    }
+
+    .main-container {
         width: 100%;
     }
 
